src/main/java/org/example/GramNewParser.java
package org.example;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GramNewParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		WS=18, ID=19, INT=20, FLOAT=21, STR=22, BOOL=23, OPER=24, COMP=25;
	public static final int
		RULE_r = 0, RULE_assignbool = 1, RULE_assignsstr = 2, RULE_var = 3, RULE_numVar = 4, 
		RULE_assignsdigit = 5, RULE_list = 6, RULE_assignlist = 7, RULE_var_1 = 8, 
		RULE_var_2 = 9, RULE_operations = 10, RULE_input = 11, RULE_print_var = 12, 
		RULE_output = 13, RULE_body = 14, RULE_cycle = 15, RULE_else_block = 16, 
		RULE_conditional_operator = 17, RULE_cond_1 = 18, RULE_cond_2 = 19, RULE_condition = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"r", "assignbool", "assignsstr", "var", "numVar", "assignsdigit", "list", 
			"assignlist", "var_1", "var_2", "operations", "input", "print_var", "output", 
			"body", "cycle", "else_block", "conditional_operator", "cond_1", "cond_2", 
			"condition"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'<?php'", "'?>'", "'='", "';'", "'['", "','", "']'", "'input()'", 
			"'echo('", "')'", "'while'", "'('", "'{'", "'}'", "'else'", "'if'", "'else if'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "WS", "ID", "INT", "FLOAT", "STR", 
			"BOOL", "OPER", "COMP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GramNew.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramNewParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RContext extends ParserRuleContext {
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).enterR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).exitR(this);
		}
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(T__0);
			setState(43);
			body();
			setState(44);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignboolContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(GramNewParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramNewParser.ID, i);
		}
		public List<TerminalNode> BOOL() { return getTokens(GramNewParser.BOOL); }
		public TerminalNode BOOL(int i) {
			return getToken(GramNewParser.BOOL, i);
		}
		public AssignboolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignbool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).enterAssignbool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).exitAssignbool(this);
		}
	}

	public final AssignboolContext assignbool() throws RecognitionException {
		AssignboolContext _localctx = new AssignboolContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_assignbool);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(50); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(46);
					match(ID);
					setState(47);
					match(T__2);
					setState(48);
					match(BOOL);
					setState(49);
					match(T__3);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(52); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignsstrContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(GramNewParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramNewParser.ID, i);
		}
		public List<TerminalNode> STR() { return getTokens(GramNewParser.STR); }
		public TerminalNode STR(int i) {
			return getToken(GramNewParser.STR, i);
		}
		public AssignsstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignsstr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).enterAssignsstr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).exitAssignsstr(this);
		}
	}

	public final AssignsstrContext assignsstr() throws RecognitionException {
		AssignsstrContext _localctx = new AssignsstrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignsstr);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(58); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(54);
					match(ID);
					setState(55);
					match(T__2);
					setState(56);
					match(STR);
					setState(57);
					match(T__3);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(60); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(GramNewParser.INT, 0); }
		public TerminalNode BOOL() { return getToken(GramNewParser.BOOL, 0); }
		public TerminalNode STR() { return getToken(GramNewParser.STR, 0); }
		public TerminalNode FLOAT() { return getToken(GramNewParser.FLOAT, 0); }
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).exitVar(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 15728640L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumVarContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(GramNewParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(GramNewParser.FLOAT, 0); }
		public TerminalNode ID() { return getToken(GramNewParser.ID, 0); }
		public NumVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).enterNumVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).exitNumVar(this);
		}
	}

	public final NumVarContext numVar() throws RecognitionException {
		NumVarContext _localctx = new NumVarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_numVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 3670016L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignsdigitContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(GramNewParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramNewParser.ID, i);
		}
		public List<TerminalNode> INT() { return getTokens(GramNewParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(GramNewParser.INT, i);
		}
		public List<TerminalNode> FLOAT() { return getTokens(GramNewParser.FLOAT); }
		public TerminalNode FLOAT(int i) {
			return getToken(GramNewParser.FLOAT, i);
		}
		public AssignsdigitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignsdigit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).enterAssignsdigit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).exitAssignsdigit(this);
		}
	}

	public final AssignsdigitContext assignsdigit() throws RecognitionException {
		AssignsdigitContext _localctx = new AssignsdigitContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignsdigit);
		try {
			int _alt;
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(66);
						match(ID);
						setState(67);
						match(T__2);
						setState(68);
						match(INT);
						setState(69);
						match(T__3);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(72); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(74);
						match(ID);
						setState(75);
						match(T__2);
						setState(76);
						match(FLOAT);
						setState(77);
						match(T__3);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(80); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(GramNewParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(GramNewParser.FLOAT, 0); }
		public TerminalNode STR() { return getToken(GramNewParser.STR, 0); }
		public TerminalNode BOOL() { return getToken(GramNewParser.BOOL, 0); }
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).exitList(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 15728640L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignlistContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GramNewParser.ID, 0); }
		public List<ListContext> list() {
			return getRuleContexts(ListContext.class);
		}
		public ListContext list(int i) {
			return getRuleContext(ListContext.class,i);
		}
		public AssignlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).enterAssignlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).exitAssignlist(this);
		}
	}

	public final AssignlistContext assignlist() throws RecognitionException {
		AssignlistContext _localctx = new AssignlistContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assignlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(ID);
			setState(87);
			match(T__2);
			setState(88);
			match(T__4);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 15728640L) != 0)) {
				{
				setState(89);
				list();
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(90);
					match(T__5);
					setState(91);
					list();
					}
					}
					setState(96);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(99);
			match(T__6);
			setState(100);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_1Context extends ParserRuleContext {
		public NumVarContext numVar() {
			return getRuleContext(NumVarContext.class,0);
		}
		public Var_1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).enterVar_1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).exitVar_1(this);
		}
	}

	public final Var_1Context var_1() throws RecognitionException {
		Var_1Context _localctx = new Var_1Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_var_1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			numVar();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_2Context extends ParserRuleContext {
		public NumVarContext numVar() {
			return getRuleContext(NumVarContext.class,0);
		}
		public Var_2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).enterVar_2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).exitVar_2(this);
		}
	}

	public final Var_2Context var_2() throws RecognitionException {
		Var_2Context _localctx = new Var_2Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_var_2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			numVar();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OperationsContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GramNewParser.ID, 0); }
		public Var_1Context var_1() {
			return getRuleContext(Var_1Context.class,0);
		}
		public TerminalNode OPER() { return getToken(GramNewParser.OPER, 0); }
		public Var_2Context var_2() {
			return getRuleContext(Var_2Context.class,0);
		}
		public OperationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).enterOperations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).exitOperations(this);
		}
	}

	public final OperationsContext operations() throws RecognitionException {
		OperationsContext _localctx = new OperationsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_operations);
		try {
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				match(ID);
				setState(107);
				match(T__2);
				{
				setState(108);
				var_1();
				setState(109);
				match(OPER);
				setState(110);
				var_2();
				}
				setState(112);
				match(T__3);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				match(ID);
				setState(115);
				match(OPER);
				setState(116);
				match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GramNewParser.ID, 0); }
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).exitInput(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_input);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(ID);
			setState(120);
			match(T__2);
			setState(121);
			match(T__7);
			setState(122);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Print_varContext extends ParserRuleContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public Print_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).enterPrint_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).exitPrint_var(this);
		}
	}

	public final Print_varContext print_var() throws RecognitionException {
		Print_varContext _localctx = new Print_varContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_print_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			var();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OutputContext extends ParserRuleContext {
		public List<Print_varContext> print_var() {
			return getRuleContexts(Print_varContext.class);
		}
		public Print_varContext print_var(int i) {
			return getRuleContext(Print_varContext.class,i);
		}
		public OutputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).enterOutput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).exitOutput(this);
		}
	}

	public final OutputContext output() throws RecognitionException {
		OutputContext _localctx = new OutputContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_output);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(T__8);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 15728640L) != 0)) {
				{
				{
				setState(127);
				print_var();
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			match(T__9);
			setState(134);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public List<AssignboolContext> assignbool() {
			return getRuleContexts(AssignboolContext.class);
		}
		public AssignboolContext assignbool(int i) {
			return getRuleContext(AssignboolContext.class,i);
		}
		public List<AssignsstrContext> assignsstr() {
			return getRuleContexts(AssignsstrContext.class);
		}
		public AssignsstrContext assignsstr(int i) {
			return getRuleContext(AssignsstrContext.class,i);
		}
		public List<AssignsdigitContext> assignsdigit() {
			return getRuleContexts(AssignsdigitContext.class);
		}
		public AssignsdigitContext assignsdigit(int i) {
			return getRuleContext(AssignsdigitContext.class,i);
		}
		public List<AssignlistContext> assignlist() {
			return getRuleContexts(AssignlistContext.class);
		}
		public AssignlistContext assignlist(int i) {
			return getRuleContext(AssignlistContext.class,i);
		}
		public List<InputContext> input() {
			return getRuleContexts(InputContext.class);
		}
		public InputContext input(int i) {
			return getRuleContext(InputContext.class,i);
		}
		public List<OutputContext> output() {
			return getRuleContexts(OutputContext.class);
		}
		public OutputContext output(int i) {
			return getRuleContext(OutputContext.class,i);
		}
		public List<OperationsContext> operations() {
			return getRuleContexts(OperationsContext.class);
		}
		public OperationsContext operations(int i) {
			return getRuleContext(OperationsContext.class,i);
		}
		public List<CycleContext> cycle() {
			return getRuleContexts(CycleContext.class);
		}
		public CycleContext cycle(int i) {
			return getRuleContext(CycleContext.class,i);
		}
		public List<Conditional_operatorContext> conditional_operator() {
			return getRuleContexts(Conditional_operatorContext.class);
		}
		public Conditional_operatorContext conditional_operator(int i) {
			return getRuleContext(Conditional_operatorContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramNewListener ) ((GramNewListener)listener).exitBody(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_body);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(145); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(145);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						setState(136);
						assignbool();
						}
						break;
					case 2:
						{
						setState(137);
						assignsstr();
						}
						break;
					case 3:
						{
						setState(138);
						assignsdigit();
						}
						break;
					case 4:
						{
						setState(139);
						assignlist();
						}
						break;
					case 5:
						{
						setState(140);
						input();
						}
						break;
					case 6:
						{
						setState(141);
						output();
						}
						break;
					case 7:
						{
						setState(142);
						operations();
						}
						break;
					case 8:
						{
						setState(143);
						cycle();
						}
						break;
					case 9:
						{
						setState(144);
						conditional_operator();
						}
						break;
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(147); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
